歌曲详情页

--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    "pages/recommendSong/recommendSong",
+    "pages/songDetail/songDetail",
     "pages/video/video",
     "pages/personal/personal",
     "pages/login/login",
